--- a/Practical 1/Practical 1.vcxproj
+++ b/Practical 1/Practical 1.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Exercise Q2.cpp" />
+    <ClCompile Include="Practical Exercise Chapter 1.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
